--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
 </head>
 <body>
     <header class="header">
@@ -75,30 +75,38 @@
              <li>
                 <div class="team-item-frame">
                 <img src="images/ihor.jpg" alt="photo of Igor" width="270">
-                    <h3 class="team-caption">Ігор Дем'яненко</h3>
-                    <p class="team-details">Product Designer</p>
+                    <div class="team-item-caption">
+                        <h3 class="team-caption">Ігор Дем'яненко</h3>
+                        <p class="team-details">Product Designer</p>
+                    </div>
                 </div>
             </li>
            
             <li>
                 <div class="team-item-frame">
-                <img src="images/olga.jpg" alt="photo of Olga" width="270">        
-                    <h3 class="team-caption">Ольга Рєпіна</h3>
-                    <p class="team-details">Frontend Developer</p>    
+                <img src="images/olga.jpg" alt="photo of Olga" width="270">
+                    <div class="team-item-caption">
+                        <h3 class="team-caption">Ольга Рєпіна</h3>
+                        <p class="team-details">Frontend Developer</p>
+                    </div>   
                 </div>
             </li>
             <li>
                 <div class="team-item-frame">
                 <img src="images/mykola.jpg" alt="photo of Mykola" width="270">
-                    <h3 class="team-caption">Микола Тарасов</h3>
-                    <p class="team-details">Marketing</p>
+                    <div class="team-item-caption">
+                        <h3 class="team-caption">Микола Тарасов</h3>
+                        <p class="team-details">Marketing</p>
+                    </div>
                 </div>
             </li>
             <li>
                 <div class="team-item-frame">
                 <img src="images/myhailo.jpg" alt="photo of Myhailo" width="270">
-                    <h3 class="team-caption">Михайло Єрмаков</h3>
-                    <p class="team-details">UI Designer</p>
+                    <div class="team-item-caption">
+                        <h3 class="team-caption">Михайло Єрмаков</h3>
+                        <p class="team-details">UI Designer</p>
+                    </div>
                 </div>
             </li>
             </ul>
